# learn_cmake

./: CMakeLists.txt  README.md
src/: Hello.cpp  main.cpp
